--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -66,18 +66,108 @@
   background-color: #ffffff;
   height: 100px;
   padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.room_overview{
+  text-decoration: none;
+  color: #333333;
+  font-size: 24px;
+}
+
+
+
+.end_chat a {
+  text-decoration: none;
+  color: darkred;
+  padding: 20px;
+  border: 1px solid darkred;
 }
 
 .main_middle{
   background-color: #FAFAFA;
   height: calc(100vh - 100px - 90px);
   padding: 46px 40px 0;
+  overflow-y: scroll;
+  box-sizing: border-box;
+}
+
+.main_middle::-webkit-scrollbar{
+  display: none;
+}
+
+.messages{
+  margin: 10px 0;
+}
+
+.message_info{
+  display: flex;
+}
+
+.info_name{
+  font-size: 16px;
+  color: #434a54;
+}
+
+.info_date{
+  font-size: 12px;
+  color: #999;
+  padding-left: 10px;
+}
+
+.message_text{
+  margin-top: 10px;
+}
+
+.text_post{
+  color: #434a54;
+  font-size: 14px;
+  margin-bottom: 40px;
 }
 
 .main_bottom{
   background-color: #DDDDDD;
   height: 90px;
   padding: 20px 40px;
+  display: flex;
+  box-sizing: border-box;
 }
 
+.form-input{
+  background-color: white;
+  display: flex;
+  width: 100%;
+}
 
+.form-message{
+  border: none;
+  height: 50px;
+  width: 100%;
+  padding-left: 10px;
+}
+
+.form-submit{
+  background-color: #38AEF0;
+  border: none;
+  color: white;
+  font-size: 16px;
+  height: 50px;
+  margin-left: 15px;
+  padding: 0 20px;
+}
+
+.form-image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+}
+
+.hidden{
+  display: none;
+}
