--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -7,20 +7,17 @@
     </div>
 
     <div class = "create_chat">
-    <a href="#">チャットを作成する</a>
+      <%= link_to "チャットを作成する", new_room_path %>
     </div>
   </div>
 
   <div class = "side_bottom">
-    <div class = "room">
-      <div class = "room_name">
-        <a href="#">techroom1</a>
+    <% current_user.rooms.each do |room|%>
+      <div class = "room">
+        <div class = "room_name">
+          <a href="#"><%= room.name%></a>
+        </div>
       </div>
-    </div>
-        <div class = "room">
-      <div class = "room_name">
-        <a href="#">techroom2</a>
-      </div>
-    </div>
+    <% end %>
   </div>
 
