メッセージの送信機能実装

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -26,7 +26,7 @@
       </div>
     </div>
 
-        <div class = "messages">
+    <div class = "messages">
       <div class = "message_info">
         <div class = "info_name">
           Jim
@@ -43,13 +43,18 @@
     </div>
   </div>
 
-  <div class = "main_bottom">
-      <div class = "form-input">
-        <input class = "form-message" placeholder = "type a message">
-        <label class = "form-image">
-          <span class = "image-file">画像</span>
-          <input type="file" class = "hidden">
-        </label>
-      </div>
-      <input class = "form-submit" type= "submit" value ="送信">
-  </div>
+
+  <%= form_with model: [@room, @message], html: {class: "form"}, local: true do |f|%>
+    <div class = "main_bottom">
+    <div class="form-input">
+      <%= f.text_field :content, class: 'form-message', placeholder: 'type a message' %>
+      <label class="form-image">
+        <span class="image-file">画像</span>
+        <%= f.file_field :image, class: 'hidden' %>
+      </label>
+    </div>
+  <%= f.submit '送信', class: 'form-submit' %>
+    </div>
+  <% end %>
+
+
