チャットルーム名の表示

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,7 +1,9 @@
 
   <div class = "main_top">
     <div class= "room_overview">
-    hogefuga
+      <div class= "overview_name">
+        <%= @room.name%>
+      </div>
     </div>
 
     <div class = "end_chat">
