--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -7,7 +7,7 @@
     </div>
 
     <div class = "end_chat">
-    <a href="#">チャットを終了する</a>
+      <%= link_to "チャットを終了する", room_path(@room), method: :delete%>
     </div>
   </div>
 
@@ -18,14 +18,14 @@
 
   <%= form_with model: [@room, @message], html: {class: "form"}, local: true do |f|%>
     <div class = "main_bottom">
-    <div class="form-input">
-      <%= f.text_field :content, class: 'form-message', placeholder: 'type a message' %>
-      <label class="form-image">
-        <span class="image-file">画像</span>
-        <%= f.file_field :image, class: 'hidden' %>
-      </label>
-    </div>
-  <%= f.submit '送信', class: 'form-submit' %>
+      <div class="form-input">
+        <%= f.text_field :content, class: 'form-message', placeholder: 'type a message' %>
+        <label class="form-image">
+          <span class="image-file">画像</span>
+          <%= f.file_field :image, class: 'hidden' %>
+        </label>
+      </div>
+      <%= f.submit '送信', class: 'form-submit' %>
     </div>
   <% end %>
 
